@startuml
title Diagrama de Clases - Gestión de Casas Rurales (con Servicios Angular)

skinparam packageStyle rectangle

' =============================
' FRONTEND (Modelos Angular)
' =============================
package "Frontend - Angular" {
  class User {
    +id: number
    +name: string
    +email: string
    +password: string
    +role: string
  }

  class House {
    +id: number
    +name: string
    +location: string
    +description: string
    +pricePerNight: number
    +maxGuests: number
    +images: string[]
    +ownerId: number
  }

  class Reservation {
    +id: number
    +houseId: number
    +userId: number
    +startDate: Date
    +endDate: Date
    +totalPrice: number
    +status: 'pending' | 'confirmed' | 'cancelled'
  }

 
  User "1" -- "*" Reservation
  House "1" -- "*" Reservation
  User "1" -- "*" House : owns >
}

' =============================
' ANGULAR SERVICES
' =============================
package "Angular Services" {
  class AuthService
  class HouseService
  class ReservationService

  AuthService --> User : login/register
  HouseService --> House : CRUD houses
  ReservationService --> Reservation : CRUD reservations
}

' Conexión servicios Angular con backend APIs
AuthService --> "UserApi::UserController" : Peticiones HTTP
HouseService --> "HouseApi::HouseController" : Peticiones HTTP
ReservationService --> "HouseApi::ReservationController" : Peticiones HTTP

' =============================
' BACKEND - UserApi (Laravel)
' =============================
package "Backend - UserApi" {
  class App\\Models\\User {
    +id: int
    +name: string
    +email: string
    +password: string
    +role: string
  }




}

' =============================
' BACKEND - HouseApi (Laravel)
' =============================
package "Backend - HouseApi" {
  class App\\Models\\House {
    +id: int
    +name: string
    +location: string
    +description: string
    +price_per_night: float
    +max_guests: int
    +owner_id: int
  }

  class App\\Models\\Reservation {
    +id: int
    +user_id: int
    +house_id: int
    +start_date: date
    +end_date: date
    +total_price: float
    +status: string
  }

  class HouseController
  class ReservationController

  App\\Models\\House "1" -- "*" App\\Models\\Reservation
  App\\Models\\Reservation "*" -- "1" App\\Models\\User : reservedBy >
}
@enduml
